[gd_scene load_steps=4 format=2]

[ext_resource path="res://GodotFPS-Assets/UI/UI_Square.png" type="Texture" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]
[ext_resource path="res://GodotFPS-Assets/Font/new_dynamicfont.tres" type="DynamicFont" id=3]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="healthBar" type="TextureProgress" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -36.0
margin_right = 259.0
value = 50.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
tint_under = Color( 0.184314, 0.184314, 0.184314, 1 )
tint_progress = Color( 0.898039, 0.0745098, 0.0745098, 1 )
nine_patch_stretch = true

[node name="ammoText" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -99.0
margin_right = 188.0
margin_bottom = -58.0
custom_fonts/font = ExtResource( 3 )
text = "Ammo: 50"

[node name="scoreText" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -146.269
margin_right = 188.0
margin_bottom = -105.269
custom_fonts/font = ExtResource( 3 )
text = "Score: 500"
